--- a/index.html
+++ b/index.html
@@ -161,6 +161,64 @@
       document.getElementById('count').textContent = `${places.length} elementos`;
     }
 
+    // --- Barra de búsqueda ---
+const searchInput = document.createElement('input');
+searchInput.type = 'text';
+searchInput.placeholder = 'Buscar lugar...';
+searchInput.style.cssText = 'position:absolute;top:1rem;left:1rem;padding:.5rem;border-radius:8px;border:none;width:200px;z-index:1000;background:rgba(255,255,255,.9);color:#000';
+document.body.appendChild(searchInput);
+
+searchInput.addEventListener('input', () => {
+  const query = searchInput.value.toLowerCase();
+  cluster.clearLayers();
+  places.forEach(p => {
+    if (!query || p.title.toLowerCase().includes(query) || (p.tags||[]).some(t=>t.toLowerCase().includes(query))) {
+      const m = markersIndex.get(p.id);
+      if (m) cluster.addLayer(m);
+    }
+  });
+});
+
+// --- Previsualización al pasar el mouse ---
+const previewDiv = document.createElement('div');
+previewDiv.style.cssText = 'position:absolute;pointer-events:none;background:rgba(0,0,0,.75);color:#fff;padding:.5rem 1rem;border-radius:8px;max-width:250px;display:none;z-index:1000';
+document.body.appendChild(previewDiv);
+
+places.forEach(p => {
+  const m = markersIndex.get(p.id);
+  if (!m) return;
+  m.on('mouseover', e => {
+    previewDiv.innerHTML = `<strong>${p.title}</strong><br>${(p.tags||[]).map(t=>`<span style="background:#52b788;padding:2px 6px;border-radius:4px;margin-right:2px;">${t}</span>`).join('')}`;
+    previewDiv.style.left = e.originalEvent.pageX + 10 + 'px';
+    previewDiv.style.top = e.originalEvent.pageY + 10 + 'px';
+    previewDiv.style.display = 'block';
+  });
+  m.on('mousemove', e => {
+    previewDiv.style.left = e.originalEvent.pageX + 10 + 'px';
+    previewDiv.style.top = e.originalEvent.pageY + 10 + 'px';
+  });
+  m.on('mouseout', () => previewDiv.style.display = 'none');
+});
+
+// --- Botón Reset ---
+document.getElementById('reset').onclick = () => {
+  searchInput.value = '';
+  renderMarkers();
+  map.setView([4.7110, -74.0721], 12);
+};
+
+// --- Botón Ubicarme ---
+document.getElementById('locate').onclick = () => {
+  if (!navigator.geolocation) return alert('Geolocalización no soportada');
+  navigator.geolocation.getCurrentPosition(pos => {
+    const lat = pos.coords.latitude;
+    const lng = pos.coords.longitude;
+    map.setView([lat, lng], 15);
+    L.marker([lat,lng], {icon}).addTo(map).bindPopup('Tú estás aquí').openPopup();
+  }, () => alert('No se pudo obtener tu ubicación'));
+};
+
+
     map.on('click',e=>{
       openForm({coords:[e.latlng.lat,e.latlng.lng]});
     });
